--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.3.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^8.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
@@ -19,6 +20,7 @@
     "node-scss": "^7.0.3"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "sass": "^1.57.1"
   },
   "name": "the-unique-taste-landing",
@@ -26,14 +28,15 @@
   "version": "1.0.0",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gulp build && gh-pages -d assets/build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SashaPt/The-Unique-Taste-Landing.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "SashaPt",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SashaPt/The-Unique-Taste-Landing/issues"
